--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "amqplib": "^0.10.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^2.3.3"
   }
 }
