--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,9 @@
   },
   "dependencies": {
     "amqplib": "^0.10.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
