insertLoan and getLoans querying the database

--- a/api/.env
+++ b/api/.env
@@ -13,5 +13,10 @@ DATABASE=loans
 DATABASE_PASSWORD=123456
 DATABASE_PORT=6033
 
+DATABASE_STATUS_STARTED=1
+DATABASE_STATUS_PENDING=2
+DATABASE_STATUS_APPROVED=3
+DATABASE_STATUS_REJECTED=4
+
 HTTP_PORT=3000
 HTTP_JWT_SECRET=123456
