receiving result from credit analysis

--- a/api/.env
+++ b/api/.env
@@ -3,6 +3,7 @@ MYSQL_ROOT_PASSWORD=123456
 
 AMQP_URL=amqp://localhost:5673
 AMQP_EXCHANGE_LOANS=loans
+AMQP_ROUTING_KEY=loans_key
 AMQP_QUEUE_LOAN_START_PROCESSING=loanStartProcessing
 AMQP_QUEUE_LOAN_ENDED_PROCESSING=loanEndedProcessing
 AMQP_QUEUE_LOAN_GRANTED=loanGranted
