added api container + sending message to financial service + financial service consumer (mock)

--- a/api/.env
+++ b/api/.env
@@ -1,23 +1,22 @@
 MYSQL_DATABASE=loans
 MYSQL_ROOT_PASSWORD=123456
 
-AMQP_URL=amqp://localhost:5673
+AMQP_URL=amqp://acme-loans-rabbitmq:5672
 AMQP_EXCHANGE_LOANS=loans
 AMQP_ROUTING_KEY=loans_key
 AMQP_QUEUE_LOAN_START_PROCESSING=loanStartProcessing
 AMQP_QUEUE_LOAN_ENDED_PROCESSING=loanEndedProcessing
 AMQP_QUEUE_LOAN_GRANTED=loanGranted
 
-DATABASE_HOST=localhost
+DATABASE_HOST=acme-loans-mysql
 DATABASE_USERS=root
 DATABASE=loans
 DATABASE_PASSWORD=123456
-DATABASE_PORT=6033
+DATABASE_PORT=3306
 
-DATABASE_STATUS_STARTED=1
-DATABASE_STATUS_PENDING=2
-DATABASE_STATUS_APPROVED=3
-DATABASE_STATUS_REJECTED=4
+DATABASE_STATUS_PENDING=1
+DATABASE_STATUS_APPROVED=2
+DATABASE_STATUS_REJECTED=3
 
 HTTP_PORT=3000
 HTTP_JWT_SECRET=123456
